--- a/antique.store/antique.store/src/main/resources/application.properties
+++ b/antique.store/antique.store/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.jpa.properties.hibernate.format_sql=true
 # Data Definition Language
 # options - create, create-drop, update, validate
 #spring.jpa.hibernate.ddl-auto = create
+
+server.port=3000
